--- a/style.css
+++ b/style.css
@@ -5,8 +5,99 @@
 }
 
 body {
-  background-color: #f0f0f0;
   font-family: "inter", sans-serif;
   margin: 0;
   padding: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(18, 18, 18);
+}
+
+ul {
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  margin-block: 20px;
+}
+
+ul li {
+  margin-block: 10px;
+  background-color: hsl(0, 0%, 20%);
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: white;
+}
+
+li:hover {
+  background-color: hsl(75, 94%, 57%);
+}
+
+.card-container {
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  color: white;
+  background-color: hsl(0, 0%, 12%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  width: 320px;
+  height: auto;
+}
+
+.card-header img {
+  width: 100%;
+  height: 60px;
+  border-radius: 90px;
+  margin-top: 10px;
+}
+
+.card {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+h2 {
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: hsl(75, 94%, 57%);
+}
+
+h1 {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 400;
+}
+
+.address {
+  font-size: 12px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: hsl(75, 94%, 57%);
+}
+
+.content {
+  font-size: 12px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 25px;
+  color: rgb(200, 200, 200);
 }
